@@ -664,6 +664,11 @@ TkSuQmCC
 b2Z0d2FyZQBUayBUb29sa2l0IHY4LjYuOK3Fod8AAAAtSURBVHicY2AYrOD///+kKSBNw3+iAXYD
 4GysgvTRMOqHUT8MFj9gBQQV4AQAV8ZynPMIRRMAAAAASUVORK5CYII=
 `)
+	TileImgs["map-c"] = []byte(`iVBORw0KGgoAAAANSUhEUgAAABAAAAAYCAIAAAB8wupbAAAAA3NCSVQICAjb4U/gAAAAGnRFWHRT
+b2Z0d2FyZQBUayBUb29sa2l0IHY4LjYuOK3Fod8AAABYSURBVHic7ZFBDgAQDAT9/9N1kDSMreIm
+saeKmUarlJ/HY2ayXgmN8yJqNwieLdrv4FAABDl3ZprHqBPqZO5oSE1D010i4YBevJA7Teh+ITAF
+KiFTX3GZCsJRGPY9y0nwAAAAAElFTkSuQmCC
+`)
 	TileImgs["map-chasm"] = []byte(`iVBORw0KGgoAAAANSUhEUgAAABAAAAAYCAIAAAB8wupbAAAAA3NCSVQICAjb4U/gAAAAGnRFWHRT
 b2Z0d2FyZQBUayBUb29sa2l0IHY4LjYuOK3Fod8AAAAuSURBVHicY2AYBcML/P//nzTVEEAbG5CV
 EtaG7BhiHUaaDeQoJcEx5NswClABAM9VO8XUHjuJAAAAAElFTkSuQmCC
