@@ -10,6 +10,7 @@ v0.3-dev
 + New cloak of conversion, that generates MP from lost HP.
 + New terrain feature: fake stairs (harmonic illusions).
 + New unique monster: Crazy Imp that sings and plays guitar.
++ New monster: haze cat, with very good vision (in all directions).
 + Display number of remaining turns for monsters statuses too.
 + Fix rare bug when blinking to the same place.
 + Make “x” key work in key settings menu.
